feat: 30% da tela de login

--- a/front-end/login/index.html
+++ b/front-end/login/index.html
@@ -8,7 +8,28 @@
 </head>
 <body>
     <header>
-
+        <img src="../assets/img/goi-icon-header.png" alt="Logo Icone" class="icone-goi">
+        <h1>GOI Bank</h1>
     </header>
+
+    <div class="container-principal">
+        <h3>olá, Fulano, essa é a página de acesso à sua conta</h3>
+    
+        <div class="container-login">
+            <h2>Teclado virtual</h2>
+            <hr>
+            <h6>digite sua senha de acesso no teclado virtual:</h6>
+        
+            <div class="teclado">
+                <button>01 ou 02</button>
+                <button>03 ou 04</button>
+                <button>05 ou 06</button>
+                <button>07 ou 08</button>
+                <button>09 ou 10</button>
+                <button>11 ou 12</button>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
