preview: landing-page no java

--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -2,57 +2,152 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Validação de CPF</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
-        }
-        form {
-            background: #fff;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            max-width: 400px;
-            margin: auto;
-        }
-        div.form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 15px;
-            border: none;
-            background: #007BFF;
-            color: #fff;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/css/landing-page.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GOI Bank</title>
+
 </head>
 <body>
-<h1 style="text-align: center;">Validação de CPF</h1>
-<form method="post" action="validarCPF">
-    <div class="form-group">
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required>
+
+<header>
+    <div class="logo"></div> <!-- Aqui entra a imagem da logo -->
+
+    <nav class="navi">
+        <a href="#" class="no-arrow">Página inicial</a>
+        <a href="#">Para você</a>
+        <a href="#">Para o seu negócio </a>
+        <a href="#" class="no-arrow">Perguntas</a>
+    </nav>
+
+    <div class="header-right">
+        <form method="post" action="validarCPF" id="cpfForm">
+            <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" maxlength="14" required>
+            <button type="submit" class="btn-login">Login</button>
+        </form>
+        <div class="seta">
+            <img src="/static/img/seta-entrada.svg" alt="Seta para entrar">
+        </div>
+        <button class="btn-cta">Quero ser GOI</button>
     </div>
-    <div class="form-group" style="text-align: center;">
-        <button type="submit">Validar</button>
+</header>
+<main>
+    <section class="banner">
+        <div class="banner-content">
+            <h1>Goi bank.<br>Naturalmente melhor<br>para o seu bolso.</h1>
+        </div>
+    </section>
+
+    <section class="descricao">
+        <h2>Resolva sua vida financeira em poucos cliques</h2>
+        <p>O Goi oferece uma experiência completa com soluções financeiras para facilitar seu dia a dia.</p>
+    </section>
+
+    <section class="servicos">
+        <div class="card">
+            <div class="icon">💳</div>
+            <h3>Empréstimo</h3>
+            <p>Transparentes, seguros e do seu jeito. Opções de empréstimos que deixam você no controle do início ao fim.</p>
+            <a href="#">Saiba mais →</a>
+        </div>
+        <div class="card">
+            <div class="icon">🏦</div>
+            <h3>GoiConsignado</h3>
+            <p>O empréstimo consignado para servidores públicos federais e para aposentados e pensionistas do INSS.</p>
+            <a href="#">Saiba mais →</a>
+        </div>
+        <div class="card">
+            <div class="icon">📈</div>
+            <h3>Investimentos</h3>
+            <p>Investimentos a partir de R$ 1 e opções para todos os perfis. Uma experiência fácil, segura e transparente.</p>
+            <a href="#">Saiba mais →</a>
+        </div>
+        <div class="card">
+            <div class="icon">📦</div>
+            <h3>Caixinhas</h3>
+            <p>Organize e guarde dinheiro para seus planos. Crie Caixinhas personalizadas para cada um de seus objetivos.</p>
+            <a href="#">Saiba mais →</a>
+        </div>
+    </section>
+    <div class="container">
+        <div class="cartao-credito">
+            <div class="cartao-texto">
+                <h1>Conheça nosso Cartão de Crédito</h1>
+                <p>Pode chamar ele de roxinho. Além disso, pode chamar ele de moderno, gratuito e prático também.</p>
+                <a href="#">Saiba mais →</a>
+            </div>
+            <div class="imagem-fake"></div>
+        </div>
+
+        <div class="goi-ultra">
+            <div class="imagem-fake2"></div>
+            <div class="goi-texto">
+                <h2>Goi ultra</h2>
+                <p>A experiência exclusiva para clientes de alta renda.</p>
+                <a href="#">Saiba mais →</a>
+            </div>
+        </div>
     </div>
-</form>
+    <div class="banner-coteire2">
+        <div class="banner-content-coteire2">
+            <h1>Nós acreditamos que só uma pessoa pode ter controle sobre sua vida financeira: você.</h1>
+            <a href="#">Saiba mais sobre como fazemos isso →</a>
+        </div>
+    </div>
+
+    <div class="container-coteire2">
+        <div class="cards-row-coteire2">
+            <div class="card-coteire2 green-coteire2">
+                <div class="img-coteire2"></div>
+                <div>
+                    <h2>Conta do Goi</h2>
+                    <p>Manter suas contas em dia nunca foi tão simples com Assistente de Pagamentos.</p>
+                    <a href="#">Saiba mais →</a>
+                </div>
+            </div>
+
+            <div class="card-coteire2 red-coteire2">
+                <div class="img-coteire2"></div>
+                <div>
+                    <h2>Conta PJ</h2>
+                    <p>Ficou mais fácil organizar o seu negócio com a conta PJ do Nubank.</p>
+                    <a href="#">Saiba mais →</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="duvidas-coteire3">
+        <div class="duvidas-coteire3-container">
+            <h5>AJUDA</h5>
+            <h2>Ficou alguma dúvida?</h2>
+            <p>Se a sua dúvida não estiver nas perguntas frequentes, fala com a gente!</p>
+
+            <div class="faq-coteire3">
+                <div class="faq-item-coteire3">
+                    <span>Como faço para ter o cartão de crédito no next?</span>
+                    <span class="plus-coteire3">+</span>
+                </div>
+                <div class="faq-item-coteire3">
+                    <span>É necessário ter uma renda mínima para abrir uma conta next?</span>
+                    <span class="plus-coteire3">+</span>
+                </div>
+                <div class="faq-item-coteire3">
+                    <span>O next é do Bradesco?</span>
+                    <span class="plus-coteire3">+</span>
+                </div>
+                <div class="faq-item-coteire3">
+                    <span>O next tem agência?</span>
+                    <span class="plus-coteire3">+</span>
+                </div>
+            </div>
+
+            <div class="botoes-coteire3">
+                <button class="btn-duvidas-coteire3">TODAS AS DÚVIDAS</button>
+                <p>ou</p>
+                <a href="#" class="link-contato-coteire3">ENTRE EM CONTATO →</a>
+            </div>
+        </div>
+    </section>
+</main>
+<script src="/static/js/landing-page.js"></script>
 </body>
 </html>
