--- a/Banco GOI/src/main/webapp/WEB-INF/cadastro.html
+++ b/Banco GOI/src/main/webapp/WEB-INF/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <h2 class="titulo">Abra sua conta</h2>
     <p class="subtitulo">Leva apenas alguns minutos.</p>
 
-    <form>
+    <form action="/cadastro" method="post">
         <label for="nome">Nome completo</label>
         <input type="text" id="nome" name="nome" required>
 
