--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -169,6 +169,64 @@
         <p id="popup-description"></p>
     </div>
 </div>
+
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer__section">
+        <h4>Banco GOI</h4>
+        <p>
+            Rua Casa da Atriz, 969, Vila Olímpia<br>
+            Horário de funcionamento: 10h às 17h
+        </p>
+    </div>
+    <div class="footer__section">
+        <h4>Atendimento</h4>
+        <p>
+            Central de Relacionamento<br>
+            Ligue no 4004 123456
+        </p>
+    </div>
+    <div class="footer__section">
+        <h4>SAC</h4>
+        <p>
+            Para registrar sugestões,<br>
+            reclamações ou elogios:<br>
+            0800 123 1234
+        </p>
+        <p>
+            Ouvidoria:<br>
+            0800 123 1234
+        </p>
+    </div>
+    <!-- NPS existente -->
+    <div class="container-nps">
+        <div class="nps-header">
+            <h5>Avalie o nosso serviço</h5>
+            <hr>
+        </div>
+        <div class="faces">
+            <div class="face-item">
+                <img src="/static/img/mau-rosa.png" alt="face1">
+                <h6>Insatisfeito</h6>
+            </div>
+            <div class="face-item">
+                <img src="/static/img/medio-rosa.png" alt="face2">
+                <h6>Indiferente</h6>
+            </div>
+            <div class="face-item">
+                <img src="/static/img/ok-rosa.png" alt="face3">
+                <h6>Satisfeito</h6>
+            </div>
+            <div class="face-item">
+                <img src="/static/img/feliz-rosa.png" alt="face4">
+                <h6>Muito satisfeito</h6>
+            </div>
+        </div>
+    </div>
+    <div class="img-24h">
+        <img src="/static/img/24h.png" alt="24H">
+    </div>
+</footer>
 <script src="/static/js/landing-page.js"></script>
 </body>
 </html>
