--- a/Banco GOI/src/main/webapp/WEB-INF/cadastro.html
+++ b/Banco GOI/src/main/webapp/WEB-INF/cadastro.html
@@ -22,14 +22,21 @@
         <label for="cpf">CPF</label>
         <input type="text" id="cpf" name="cpf" required>
 
+        <label for="dataNascimento">Data de Nascimento</label>
+        <input type="date" id="dataNascimento" name="dataNascimento" required>
+
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
 
         <label for="celular">Celular</label>
         <input type="tel" id="celular" name="celular" required>
 
+        <label for="cep">CEP</label>
+        <input type="text" id="cep" name="cep" required>
+
         <button type="submit">Continuar</button>
     </form>
 </div>
 </body>
+<script src="/static/js/cadastro.js"></script>
 </html>
