--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -27,7 +27,7 @@
         <div class="seta">
             <img src="/static/img/seta-entrada.svg" alt="Seta para entrar">
         </div>
-        <button class="btn-cta">Quero ser GOI</button>
+        <button class="btn-cta" onclick="window.location.href= '/cadastro'">Quero ser GOI</button>
     </div>
 </header>
 <main>
@@ -42,15 +42,6 @@
         <h2>Resolva sua vida financeira em poucos cliques</h2>
         <p>O Goi oferece uma experiência completa com soluções financeiras para facilitar seu dia a dia.</p>
     </section>
-
-    <section class="simulador" id="simulador">
-        <h2>Simule seu Limite de Cheque Especial</h2>
-        <p>Informe sua renda mensal para ver o limite estimado.</p>
-        <input type="text" id="rendaMensal" placeholder="Sua renda mensal (R$)">
-        <button id="btnSimularCheque">Simular</button>
-        <div id="resultadoSimulacao" class="resultado-simulador"></div>
-    </section>
-
 
     <section class="servicos">
         <div class="card">
