feat: comunicação do banco no simulador

--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -43,6 +43,16 @@
         <p>O Goi oferece uma experiência completa com soluções financeiras para facilitar seu dia a dia.</p>
     </section>
 
+    <section class="simulador" id="simulador">
+        <h2>Simule seu Limite de Cheque Especial</h2>
+        <p>Informe seu CPF e sua renda mensal para ver o limite estimado.</p>
+
+        <input type="text" id="cpfSimulador" placeholder="Digite seu CPF" maxlength="14">
+        <input type="text" id="rendaMensal" placeholder="Sua renda mensal (R$)">
+        <button id="btnSimularCheque">Simular</button>
+        <div id="resultadoSimulacao" class="resultado-simulador"></div>
+    </section>
+
     <section class="servicos">
         <div class="card">
             <div class="icon">💳</div>
