--- a/front-end/extrato/index.html
+++ b/front-end/extrato/index.html
@@ -1,24 +1,25 @@
+<!-- extrato.html -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Extrato da Conta - GOI Bank</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="../assets/img/goi-icon-header.png" alt="Logo GOI" class="icone-goi">
+    <img src="../assets/img/goi-icon-header.png" alt="Logo GOI" class="icone-goi" />
     <h1>GOI Bank</h1>
     <nav class="menu">
-      <img src="../assets/img/person.png" class="icone-user" alt="Usuário">
+      <img src="../assets/img/person.png" class="icone-user" alt="Usuário" />
       <div class="dados-conta">
         <h6 id="agencia">ag: ----</h6><h6 id="conta">c/c: ------</h6>
       </div>
-      <img src="../assets/img/notifications.png" class="notificacao" alt="Notificações">
+      <img src="../assets/img/notifications.png" class="notificacao" alt="Notificações" />
       <div class="sair">
         <h6 class="sair-txt">Sair</h6>
-        <img src="../assets/img/seta-entrada.svg" alt="Sair">
+        <img src="../assets/img/seta-entrada.svg" alt="Sair" />
       </div>
     </nav>
   </header>
@@ -36,7 +37,7 @@
           </tr>
         </thead>
         <tbody id="extratoBody">
-          <!-- Conteúdo injetado via JS -->
+          <!-- Conteúdo via JS -->
         </tbody>
       </table>
     </div>
@@ -45,7 +46,7 @@
   <footer class="footer">
     <div class="footer__section">
       <h4>Banco GOI</h4>
-      <p>Rua Casa da Atriz, 969, Vila Olímpia<br>Horário de funcionamento: 10h às 17h</p>
+      <p>Rua Casa da Atriz, 969, Vila Olímpia<br>Horário: 10h às 17h</p>
     </div>
     <div class="footer__section">
       <h4>Atendimento</h4>
@@ -53,7 +54,7 @@
     </div>
     <div class="footer__section">
       <h4>SAC</h4>
-      <p>Para registrar sugestões, reclamações ou elogios:<br>0800 123 1234</p>
+      <p>Reclamações, elogios:<br>0800 123 1234</p>
       <p>Ouvidoria:<br>0800 123 1234</p>
     </div>
     <div class="container-nps">
@@ -72,6 +73,7 @@
       <img src="../assets/img/24h.png" alt="24H">
     </div>
   </footer>
+
   <script src="script.js"></script>
 </body>
-</html>
+</html>   
