feat: extrato funcional no BACK

--- a/front-end/extrato/index.html
+++ b/front-end/extrato/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <main class="extrato-container">
-    <h2>Extrato da Conta</h2>
+    <h2>Últimas movimentações</h2>
     <div class="tabela-wrapper">
       <table class="extrato-tabela">
         <thead>
