--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOI Bank</title>
     <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -170,7 +171,7 @@
 
             <div class="botoes-coteire3">
                 <p>ou</p>
-                <a href="mailto:contato@goibank.com.br" class="link-contato-coteire3">ENTRE EM CONTATO →</a>
+                <a href="mailto:contato@goibank.com.br" target="_blank" class="link-contato-coteire3">ENTRE EM CONTATO →</a>
             </div>
         </div>
     </section>
@@ -218,22 +219,23 @@
             <hr>
         </div>
         <div class="faces">
-            <div class="face-item">
-                <img src="/static/img/mau-rosa.png" alt="face1">
+            <div class="face-item" data-feedback="1">
+                <img src="/static/img/mau-rosa.png" alt="Insatisfeito">
                 <h6>Insatisfeito</h6>
             </div>
-            <div class="face-item">
-                <img src="/static/img/medio-rosa.png" alt="face2">
+            <div class="face-item" data-feedback="2">
+                <img src="/static/img/medio-rosa.png" alt="Indiferente">
                 <h6>Indiferente</h6>
             </div>
-            <div class="face-item">
-                <img src="/static/img/ok-rosa.png" alt="face3">
+            <div class="face-item" data-feedback="3">
+                <img src="/static/img/ok-rosa.png" alt="Satisfeito">
                 <h6>Satisfeito</h6>
             </div>
-            <div class="face-item">
-                <img src="/static/img/feliz-rosa.png" alt="face4">
+            <div class="face-item" data-feedback="4">
+                <img src="/static/img/feliz-rosa.png" alt="Muito satisfeito">
                 <h6>Muito satisfeito</h6>
             </div>
+
         </div>
     </div>
     <div class="img-24h">
