fix: rebranding GOIA BANKLINE e ajustes finos

--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/landing-page.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GOI Bank</title>
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <title>GOIA Bank</title>
+    <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
+    <link rel="stylesheet" href="/static/css/landing-page.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
-    <img src="/static/img/goi-icon-header.png" alt="logo" class="logo"> <!-- Aqui entra a imagem da logo -->
+    <img src="/static/img/goia-icon-header.png" alt="logo" class="logo" style="width: 52px;"> <!-- Aqui entra a imagem da logo -->
 
     <nav class="navi">
         <a href="#" class="no-arrow">Página inicial</a>
@@ -28,7 +28,7 @@
         <div class="seta">
             <img src="/static/img/seta-entrada.svg" alt="Seta para entrar">
         </div>
-        <button class="btn-cta" onclick="window.location.href= '/cadastro'">Quero ser GOI</button>
+        <button class="btn-cta" onclick="window.location.href= '/cadastro'">Quero ser GOIA</button>
     </div>
 </header>
 <main>
@@ -41,7 +41,7 @@
 
     <section class="descricao" id="para-voce">
         <h2>Resolva sua vida financeira em poucos cliques</h2>
-        <p>O Goi oferece uma experiência completa com soluções financeiras para facilitar seu dia a dia.</p>
+        <p>O Goia oferece uma experiência completa com soluções financeiras para facilitar seu dia a dia.</p>
     </section>
 
     <section class="simulador" id="simulador">
@@ -66,9 +66,9 @@
         </div>
         <div class="card">
             <div class="icon">🏦</div>
-            <h3>GoiConsignado</h3>
+            <h3>GoiaConsignado</h3>
             <p>O empréstimo consignado para servidores públicos federais e para aposentados e pensionistas do INSS.</p>
-            <a href="#" class="popup-trigger" data-title="GoiConsignado" data-description="Empréstimo consignado para servidores públicos e aposentados do INSS.">Saiba mais →</a>
+            <a href="#" class="popup-trigger" data-title="GoiaConsignado" data-description="Empréstimo consignado para servidores públicos e aposentados do INSS.">Saiba mais →</a>
         </div>
         <div class="card">
             <div class="icon">📈</div>
@@ -93,21 +93,21 @@
             <img src="/static/img/cartaoEarth.png" alt="Cartão Earth" class="imagem-fake">
         </div>
 
-        <div class="goi-ultra">
+        <div class="goia-ultra">
             <img src="/static/img/cartaoBlack.png" alt="Cartão Black" class="imagem-fake2">
 
-            <div class="goi-texto">
-                <h2>Goi Black</h2>
+            <div class="goia-texto">
+                <h2>Goia Black</h2>
                 <p>A experiência exclusiva para clientes de alta renda.</p>
-                <a href="#" class="popup-trigger" data-title="Goi Black" data-description="A experiência exclusiva para clientes de alta renda.">Saiba mais →</a>
+                <a href="#" class="popup-trigger" data-title="Goia Black" data-description="A experiência exclusiva para clientes de alta renda.">Saiba mais →</a>
             </div>
         </div>
     </div>
     <div class="banner-coteire2" id="beneficios">
         <img src="/static/img/cartaoBlackBanner.png" alt="Banner Cartão Black" class="banner-image-coteire2">
         <div class="banner-content-coteire2">
-            <h1>Descubra o poder do Goi Black: controle total da sua vida financeira com exclusividade.</h1>
-            <a href="#" class="popup-trigger" data-title="Goi Black" data-description="O Goi Black oferece controle total da sua vida financeira com exclusividade e benefícios únicos.">Saiba mais sobre o Goi Black →</a>
+            <h1>Descubra o poder do Goia Black: controle total da sua vida financeira com exclusividade.</h1>
+            <a href="#" class="popup-trigger" data-title="Goia Black" data-description="O Goia Black oferece controle total da sua vida financeira com exclusividade e benefícios únicos.">Saiba mais sobre o Goia Black →</a>
         </div>
     </div>
 
@@ -116,9 +116,9 @@
             <div class="card-coteire2 green-coteire2">
                 <img src="/static/img/jovens.jpeg" alt="Jovens" class="img-coteire2">
                 <div>
-                    <h2>Conta do Goi</h2>
+                    <h2>Conta do Goia</h2>
                     <p>Manter suas contas em dia nunca foi tão simples em nosso banking.</p>
-                    <a href="#" class="popup-trigger" data-title="Conta do Goi" data-description="Manter suas contas em dia nunca foi tão simples em nosso banking.">Saiba mais →</a>
+                    <a href="#" class="popup-trigger" data-title="Conta do Goia" data-description="Manter suas contas em dia nunca foi tão simples em nosso banking.">Saiba mais →</a>
                 </div>
             </div>
 
@@ -126,8 +126,8 @@
                 <img src="/static/img/boletos.webp" alt="Jovens" class="img-coteire2">
                 <div>
                     <h2>Cheque Especial</h2>
-                    <p>Tenha acesso rápido a crédito para emergências financeiras com o Cheque Especial do Goi.</p>
-                    <a href="#" class="popup-trigger" data-title="Cheque Especial" data-description="Tenha acesso rápido a crédito para emergências financeiras com o Cheque Especial do Goi.">Saiba mais →</a>
+                    <p>Tenha acesso rápido a crédito para emergências financeiras com o Cheque Especial do Goia.</p>
+                    <a href="#" class="popup-trigger" data-title="Cheque Especial" data-description="Tenha acesso rápido a crédito para emergências financeiras com o Cheque Especial do Goia.">Saiba mais →</a>
                 </div>
             </div>
         </div>
@@ -140,38 +140,38 @@
 
             <div class="faq-coteire3">
                 <div class="faq-item-coteire3">
-                    <span>Como faço para ter o cartão de crédito no GOI?</span>
+                    <span>Como faço para ter o cartão de crédito no GOIA?</span>
                     <span class="plus-coteire3">+</span>
                     <div class="faq-answer hidden">
-                        <p>Para ter o cartão de crédito GOI, basta abrir uma conta e solicitar o cartão pelo aplicativo.</p>
+                        <p>Para ter o cartão de crédito GOIA, basta abrir uma conta e solicitar o cartão pelo aplicativo.</p>
                     </div>
                 </div>
                 <div class="faq-item-coteire3">
-                    <span>É necessário ter uma renda mínima para abrir uma conta GOI?</span>
+                    <span>É necessário ter uma renda mínima para abrir uma conta GOIA?</span>
                     <span class="plus-coteire3">+</span>
                     <div class="faq-answer hidden">
-                        <p>Não, não é necessário ter uma renda mínima para abrir uma conta no GOI.</p>
+                        <p>Não, não é necessário ter uma renda mínima para abrir uma conta no GOIA.</p>
                     </div>
                 </div>
                 <div class="faq-item-coteire3">
-                    <span>O GOI é do Senac?</span>
+                    <span>O GOIA é do Senac?</span>
                     <span class="plus-coteire3">+</span>
                     <div class="faq-answer hidden">
-                        <p>Não, o GOI é uma instituição financeira independente, mas com valores alinhados ao Senac.</p>
+                        <p>Não, o GOIA é uma instituição financeira independente, mas com valores alinhados ao Senac.</p>
                     </div>
                 </div>
                 <div class="faq-item-coteire3">
-                    <span>O GOI tem agência?</span>
+                    <span>O GOIA tem agência?</span>
                     <span class="plus-coteire3">+</span>
                     <div class="faq-answer hidden">
-                        <p>O GOI é 100% digital e não possui agências físicas. Todo atendimento é feito online.</p>
+                        <p>O GOIA é 100% digital e não possui agências físicas. Todo atendimento é feito online.</p>
                     </div>
                 </div>
             </div>
 
             <div class="botoes-coteire3">
                 <p>ou</p>
-                <a href="mailto:contato@goibank.com.br" target="_blank" class="link-contato-coteire3">ENTRE EM CONTATO →</a>
+                <a href="mailto:contato@goiabank.com.br" target="_blank" class="link-contato-coteire3">ENTRE EM CONTATO →</a>
             </div>
         </div>
     </section>
@@ -187,7 +187,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer__section">
-        <h4>Banco GOI</h4>
+        <h4>Banco GOIA</h4>
         <p>
             Rua Casa da Atriz, 969, Vila Olímpia<br>
             Horário de funcionamento: 10h às 17h
