fix: redirecionamento para aws

--- a/Banco GOI/src/main/webapp/index.html
+++ b/Banco GOI/src/main/webapp/index.html
@@ -242,6 +242,7 @@
         <img src="/static/img/24h.png" alt="24H">
     </div>
 </footer>
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/landing-page.js"></script>
 </body>
 </html>
