fix: header do index

--- a/Banco GOIA/src/main/webapp/index.html
+++ b/Banco GOIA/src/main/webapp/index.html
@@ -11,8 +11,10 @@
 <body>
 
 <header>
-    <img src="/static/img/goia-icon-header.png" alt="logo" class="logo" style="width: 52px;"> <!-- Aqui entra a imagem da logo -->
-    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 600; color: #ff4f5a; margin-top: 10px; font-size: 26px; margin-left: -425px; margin-bottom:1px;">GOIA Bank</h1>
+    <div class="logo-container">
+        <img src="/static/img/goia-icon-header.png" alt="logo" class="logo"> <!-- Aqui entra a imagem da logo -->
+        <h1 class="logo-text">GOIA Bank</h1>
+    </div>
     <nav class="navi">
         <a href="#" class="no-arrow">Página inicial</a>
         <a href="#para-voce">Para você</a>
