fix: NPS e disclaimer de projeto acadêmico

--- a/Banco GOIA/src/main/webapp/index.html
+++ b/Banco GOIA/src/main/webapp/index.html
@@ -244,6 +244,11 @@
         <img src="/static/img/24h.png" alt="24H">
     </div>
 </footer>
+
+<!-- CSS e JS do Disclaimer Acadêmico -->
+<link rel="stylesheet" href="/static/css/disclaimer.css">
+<script src="/static/js/disclaimer.js"></script>
+
 <script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/landing-page.js"></script>
 </body>
